@@ -21,6 +21,7 @@
     clean udevil mount points on device removal, exit
     fix auto umount on eject
     fix icon view drag target #132
+    added custom Protocol Handler setting to Path Bar context menu
 0.7.10  2012-07-25:
     added sort options #87 #37 #23
     completed russian translation ru.po
